--- a/src/main/webapp/VIEW/updateCm.xhtml
+++ b/src/main/webapp/VIEW/updateCm.xhtml
@@ -278,7 +278,7 @@
                                              validateClient="true"
                                              class="ui-button-success"
                                              disabled="#{vsBean.buttonSuccess}"
-                                             action="#{aeBean.submitFormUpdateAe}"/>
+                                             action="#{cmBean.submitFormUpdateCm}"/>
                         </p:outputPanel>
 
                         <p:outputPanel rendered="#{connectionBean.user.roleByIdRole.roleLabel == 'CRA' and !eventBean.event.monitored and eventBean.event.available}">
