--- a/src/main/webapp/VIEW/consultQueryTe.xhtml
+++ b/src/main/webapp/VIEW/consultQueryTe.xhtml
@@ -45,6 +45,7 @@
                                 <p:datePicker id="input_Te_Date" value="#{teBean.te.teDate}" monthNavigator="true" yearNavigator="true" yearRange="1945:2100"
                                               disabled="true">
                                 </p:datePicker>
+                            </div>
                             <span class="field col-12 md:col-4 p-20-0">
                                 <p:outputLabel for="inputTargetLesion" value="#{I18N['tePage.target.lesion']}"/>
                                 <p:selectOneMenu id="inputTargetLesion"
@@ -117,7 +118,7 @@
                     </h2>
                     <p:outputPanel class="form-control">
                         <h:panelGroup class="field col-12 md:col-4 p-20-0">
-                            <p:outputLabel for="input_query_text" value="#{I18N['queryPage.text']}"/>
+                            <p:outputLabel for="input_query_text" value="#{I18N['queryPage.text']} - #{I18N['userPage.username']} - #{queryBean.query.userByIdUser.username}"/>
                             <p:inputTextarea  rows="6" cols="33" id="input_query_text" class="label" value="#{queryBean.query.queryText}"
                                               placeholder="#{I18N['vsPage.vsNd.placeholder']}"
                                               disabled="true">
