--- a/src/main/webapp/VIEW/listOfAllQueries.xhtml
+++ b/src/main/webapp/VIEW/listOfAllQueries.xhtml
@@ -9,13 +9,13 @@
       xmlns:p="http://primefaces.org/ui">
 <ui:composition template="/WEB-INF/TEMPLATES/OverallTemplate.xhtml">
     <ui:define name="title">
-        <h:outputText value="#{I18N['eventsPage.ListOfEvents']}"/>
+        <h:outputText value="#{I18N['query.ListOfQueries']}"/>
     </ui:define>
     <ui:define name="content">
         <div class="content card">
             <div class="block p-20 form-container">
                 <h2>
-                    <h:outputText value="#{I18N['eventsPage.ListOfEvents']}" />
+                    <h:outputText value="#{I18N['query.ListOfQueries']}" />
                 </h2>
                 <h:form>
                     <f:metadata>
