--- a/src/main/webapp/VIEW/updateDm.xhtml
+++ b/src/main/webapp/VIEW/updateDm.xhtml
@@ -24,12 +24,19 @@
                             <p:inputNumber id="input_year" class="label" value="#{dmBean.dm.yearOfBirth}"
                                            placeholder="#{I18N['dmPage.year.placeholder']}"
                                            validatorMessage="#{I18N['dmPage.year.errorMessage']}"
-                                           minValue="1920"
                                            disabled="#{connectionBean.user.roleByIdRole.roleLabel != 'SITE' or !dmBean.dm.eventByIdEvent.available}">
-                                <p:ajax update="messageYear" event="blur"/>
+                                    <p:ajax process="@this" update="@all"/>
+                                    <p:ajax event="change" process="@this" update="@all" listener="#{dmBean.testDmYearOfBirth()}"/>
+                                    <p:ajax event="change" process="@this" update="@all" listener="#{dmBean.testAllEnumsDm()}"/>
                             </p:inputNumber>
                         </span>
-                        <p:message id="messageYear" for="@previous"/>
+
+                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{dmBean.messageErrorYearOfBirth}">
+                            <div><span class="ui-message-error-icon"> </span>
+                                <span class="ui-message-error-detail"><h:outputText
+                                        value="#{I18N['dmPage.year.errorMessage']}"/></span>
+                            </div>
+                        </div>
                         <span class="field col-12 md:col-4 p-20-0">
                             <p:outputLabel for="inputSex" value="#{I18N['dmPage.sex']}"/>
                             <p:selectOneMenu id="inputSex"
@@ -47,8 +54,17 @@
                                                var="Sex"
                                                itemLabel="#{Sex.getSex()}"
                                                itemValue="#{Sex}"/>
+                                <p:ajax process="@this" update="@all"/>
+                                    <p:ajax event="change" process="@this" update="@all" listener="#{dmBean.testDmYearOfBirth()}"/>
+                                    <p:ajax event="change" process="@this" update="@all" listener="#{dmBean.testAllEnumsDm()}"/>
                             </p:selectOneMenu>
                         </span>
+                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{dmBean.messageErrorDmSex}">
+                            <div><span class="ui-message-error-icon"> </span>
+                                <span class="ui-message-error-detail"><h:outputText
+                                        value="#{I18N['messageErrorDmSex']}"/></span>
+                            </div>
+                        </div>
                         <span class="field col-12 md:col-4 p-20-0">
                             <p:outputLabel for="inputEthnicity" value="#{I18N['dmPage.ethnicity']}"/>
                             <p:selectOneMenu id="inputEthnicity"
@@ -66,8 +82,17 @@
                                                var="Ethnicity"
                                                itemLabel="#{Ethnicity.getEthnicity()}"
                                                itemValue="#{Ethnicity}"/>
+                                <p:ajax process="@this" update="@all"/>
+                                    <p:ajax event="change" process="@this" update="@all" listener="#{dmBean.testDmYearOfBirth()}"/>
+                                    <p:ajax event="change" process="@this" update="@all" listener="#{dmBean.testAllEnumsDm()}"/>
                             </p:selectOneMenu>
                         </span>
+                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{dmBean.messageErrorDmEthnicity}">
+                            <div><span class="ui-message-error-icon"> </span>
+                                <span class="ui-message-error-detail"><h:outputText
+                                        value="#{I18N['messageErrorDmEthnicity']}"/></span>
+                            </div>
+                        </div>
                         <span class="field col-12 md:col-4 p-20-0">
                             <p:outputLabel for="inputCulture" value="#{I18N['dmPage.culture']}"/>
                             <p:selectOneMenu id="inputCulture"
@@ -85,8 +110,17 @@
                                                var="Culture"
                                                itemLabel="#{Culture.getCulture()}"
                                                itemValue="#{Culture}"/>
+                                <p:ajax process="@this" update="@all"/>
+                                    <p:ajax event="change" process="@this" update="@all" listener="#{dmBean.testDmYearOfBirth()}"/>
+                                    <p:ajax event="change" process="@this" update="@all" listener="#{dmBean.testAllEnumsDm()}"/>
                             </p:selectOneMenu>
                         </span>
+                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{dmBean.messageErrorDmCulture}">
+                            <div><span class="ui-message-error-icon"> </span>
+                                <span class="ui-message-error-detail"><h:outputText
+                                        value="#{I18N['messageErrorDmCulture']}"/></span>
+                            </div>
+                        </div>
                     </p:outputPanel>
                     <span class="responsiveSubmit">
                         <p:outputPanel rendered="#{connectionBean.user.roleByIdRole.roleLabel == 'SITE' and dmBean.dm.eventByIdEvent.available}">
@@ -96,6 +130,9 @@
                                              class="ui-button-success"
                                              disabled="#{vsBean.buttonSuccess}"
                                              action="#{dmBean.submitFormUpdateDm}"/>
+                                <p:ajax process="@this" update="@all"/>
+                                    <p:ajax event="change" process="@this" update="@all" listener="#{dmBean.testDmYearOfBirth()}"/>
+                                    <p:ajax event="change" process="@this" update="@all" listener="#{dmBean.testAllEnumsDm()}"/>
                         </p:outputPanel>
 
                         <p:outputPanel rendered="#{connectionBean.user.roleByIdRole.roleLabel == 'CRA' and !eventBean.event.monitored and eventBean.event.available}">
