--- a/src/main/webapp/VIEW/consultSubject.xhtml
+++ b/src/main/webapp/VIEW/consultSubject.xhtml
@@ -54,7 +54,8 @@
                         </span>
                     </p:outputPanel>
                     <span class="responsiveSubmit">
-                        <p:linkButton outcome="/VIEW/home.xhtml" value="#{I18N['connectionpage.return.button']}" class="ui-button-secondary" />
+                        <p:commandButton value="#{I18N['connectionpage.return.button']}" action="#{subjectBean.cancelForm()}"
+                                         class="ui-button-secondary" id="cancelButton"/>
                     </span>
                 </h:form>
             </div>
