testing end 17Sep

--- a/src/main/webapp/VIEW/addTe.xhtml
+++ b/src/main/webapp/VIEW/addTe.xhtml
@@ -35,14 +35,15 @@
                             <h:panelGroup class="field col-12 md:col-4 p-20-0">
                                 <p:outputLabel for="input_te_nd" value="#{I18N['tePage.visitNd']}"/>
                                 <p:inputTextarea  rows="6" cols="33" id="input_te_nd" class="label" value="#{teBean.te.teNd}"
-                                                  placeholder="#{I18N['tePage.visitNd.placeholder']}"/>
-                                <p:ajax event="blur" process="@this" update="@all" listener="#{teBean.testInputTeNd()}"/>
+                                                  placeholder="#{I18N['tePage.visitNd.placeholder']}">
+                                    <p:ajax event="blur" process="@this" update="@all" listener="#{teBean.testInputTeNd()}"/>
+                                </p:inputTextarea>
                             </h:panelGroup>
                         </h:panelGroup>
                         <div class="ui-message ui-message-error ui-widget ui-corner-all #{teBean.messageErrorVisitNdFalse}">
                             <div><span class="ui-message-error-icon"> </span>
                                 <span class="ui-message-error-detail"><h:outputText
-                                        value="#{I18N['messageErrorVisitNdFalse']}"/></span>
+                                        value="#{I18N['tePage.visitNd.placeholder']}"/></span>
                             </div>
                         </div>
                         <h:panelGroup rendered="#{teBean.te.teYn}">
@@ -59,10 +60,10 @@
                                             value="#{I18N['messageErrorVisitDate']}"/></span>
                                 </div>
                             </div>
-                            <div class="ui-message ui-message-error ui-widget ui-corner-all #{teBean.messageErrorVisitDateMissing}">
+                            <div class="ui-message ui-message-error ui-widget ui-corner-all #{teBean.messageErrorTeDateMissing}">
                                 <div><span class="ui-message-error-icon"> </span>
                                     <span class="ui-message-error-detail"><h:outputText
-                                            value="#{I18N['messageErrorVisitDateMissing']}"/></span>
+                                            value="#{I18N['messageErrorTeDateMissing']}"/></span>
                                 </div>
                             </div>
                             <span class="field col-12 md:col-4 p-20-0">
