--- a/src/main/webapp/VIEW/listOfUsers.xhtml
+++ b/src/main/webapp/VIEW/listOfUsers.xhtml
@@ -41,7 +41,10 @@
                                              placeholder="#{I18N['listPage.filter']}"/>
                                 <p:commandButton class="hidden" update="@form"/>
                             </p:outputPanel>
-                        </f:facet>
+                        </f:facet><p:column>
+                        <f:facet name="header">#{I18N['userPage.username']}</f:facet>
+                        <h:outputText value="#{r.username}"></h:outputText>
+                    </p:column>
                         <p:column>
                             <f:facet name="header">#{I18N['userPage.lastName']}</f:facet>
                             <h:outputText value="#{r.lastName}"></h:outputText>
