--- a/src/main/webapp/VIEW/updateSubject.xhtml
+++ b/src/main/webapp/VIEW/updateSubject.xhtml
@@ -37,7 +37,8 @@
                                              effect="fade"
                                              var="e"
                                              filter="true"
-                                             filterMatchMode="contains">
+                                             filterMatchMode="contains"
+                                             disabled="true">
                                 <!-- reload list editor from db. -->
                                 <f:metadata>
                                     <f:event type="preRenderView" listener="#{siteBean.initAllEditorPermittedSite()}"/>
