--- a/src/main/webapp/VIEW/addTe.xhtml
+++ b/src/main/webapp/VIEW/addTe.xhtml
@@ -40,7 +40,7 @@
                                 </p:inputTextarea>
                             </h:panelGroup>
                         </h:panelGroup>
-                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{teBean.messageErrorVisitNdFalse}">
+                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{teBean.messageErrorTeNdFalse}">
                             <div><span class="ui-message-error-icon"> </span>
                                 <span class="ui-message-error-detail"><h:outputText
                                         value="#{I18N['tePage.visitNd.placeholder']}"/></span>
